# ps3c-robust-inference

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: baseline.yaml  ensemble.yaml  selective.yaml  tta.yaml
data/: README.md
docs/: architecture.md
notebooks/: README.md
results/: README.md  adaptive_ensemble_canonical.json  adaptive_ensemble_results.txt  baseline_table.csv  bbse_matched_results.json  bbse_results.json  conformal_results.json  conformal_results_aps.json  conformal_stage3_analysis.json  dataset_audit.json  ensemble_baselines.json  weight_generator_results.json
scripts/: calibrate_conformal.py  reproduce_baseline.py  reproduce_ensemble_baseline.py  run_01_verify.py  run_02_baselines.py  run_03_weight_generator.py  run_04_conformal.py  run_05_bbse.py  run_06_bbse_matched.py  run_07_conformal_analysis.py  run_full_pipeline.py  run_tta.py  train_adaptive_ensemble.py  train_ensemble.py
src/ps3c_robust/: __init__.py
src/ps3c_robust/adapt/: __init__.py  bbse.py
src/ps3c_robust/baseline/: __init__.py  models.py
src/ps3c_robust/data/: __init__.py  apacc.py  team_outputs.py
src/ps3c_robust/ensemble/: __init__.py  adaptive.py
src/ps3c_robust/eval/: __init__.py  metrics.py
src/ps3c_robust/selective/: __init__.py  conformal.py
src/ps3c_robust/tta/: __init__.py  hybrid_tta.py  layernorm_tta.py  tent.py
src/ps3c_robust/utils/: __init__.py  seed.py
tests/: test_bbse.py  test_smoke.py
weights/: README.md
