[project]
name = "ps3c-robust-inference"
version = "0.1.0"
description = "Three-stage framework (architecture-aware TTA + sample-adaptive ensemble + conformal selective prediction) for the PS3C cervical cell classification challenge."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Asfand Yar", email = "yarasfand886@gmail.com" },
]
keywords = [
    "medical-imaging",
    "cervical-cancer",
    "test-time-adaptation",
    "conformal-prediction",
    "vision-transformer",
    "ensemble",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Deep learning core
    "torch>=2.1",
    "torchvision>=0.16",
    "timm>=1.0.0",            # EVA-02, MaxViT, ResNet variants, SwinV2, ConvNeXt, etc.
    "transformers>=4.40",     # foundation models (UNI, H-optimus, Gigapath if hosted on HF)
    "peft>=0.10",             # LoRA — JNG team uses it
    "einops>=0.7",            # ViT tensor ops
    "safetensors>=0.4",       # weight loading

    # Numerics
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",      # RF + simple ensemble baselines

    # Gradient-boost ensemble baselines (scripts/run_02_baselines.py)
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",

    # Conformal prediction
    "mapie>=0.8",             # scaffolding; custom logic on top in src/ps3c_robust/selective

    # Imaging
    "opencv-python>=4.9",
    "Pillow>=10.0",
    "albumentations>=1.4",

    # Plotting
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Config & I/O
    "pyyaml>=6.0",
    "tqdm>=4.66",

    # Logging
    "tensorboard>=2.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[project.urls]
Homepage = "https://github.com/asfandyar-prog/ps3c-robust-inference"
Repository = "https://github.com/asfandyar-prog/ps3c-robust-inference"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ps3c_robust"]

# ---- Tooling ----------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # long lines — let formatter handle it
    "N803",   # allow X, Y as ML variable names
    "N806",   # allow uppercase locals (e.g. F1)
    "RUF002", # allow Greek letters / unicode minus in docstrings (γ, β, α, −)
    "RUF003", # same, in comments
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false   # turn on once code is fleshed out
ignore_missing_imports = true   # timm/peft/etc. don't ship full stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
